Integrate catch2 test framework and automated source_groups

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,10 @@
 link_libraries(glibby)
 include_directories(${GLIBBY_INCLUDE_DIR})
 
+if(NOT ${GLIBBY_BUILD_RENDERER})
+  message(FATAL_ERROR "GLIBBY_BUILD_RENDERER is OFF but you are attempting to build the examples. You cannot build examples without building the renderer.")
+endif()
+
 add_executable(distance distance.cpp)
 add_executable(vk_window vk_window.cpp)
 #add_executable(...)
