--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
     - name:  Install dependencies
       run:   |
          if [ "$RUNNER_OS" == "Linux" ]; then
-              apt install libxrandr-dev libxi-dev
+              sudo apt install -y libxrandr-dev libxi-dev
          #elif [ "$RUNNER_OS" == "Windows" ]; then
          #     choco install important_windows_software
          #else
