--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,6 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
+    -name: Prepare Vulkan SDK
+     uses: humbletim/setup-vulkan-sdk@v1.2.0
+     with:
+       vulkan-query-version: 1.3.204.0
+       vulkan-components: Vulkan-Headers, Vulkan-Loader
+       vulkan-use-cache: true
     
     - name:  Install dependencies
       run:   |
