--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,7 @@ jobs:
       run:   |
          if [ "$RUNNER_OS" == "Linux" ]; then
               sudo apt update
-              sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
+              sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
          #elif [ "$RUNNER_OS" == "Windows" ]; then
          #     choco install important_windows_software
          #else
