--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,15 +15,6 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest] #, macOS-latest]
 
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{runner.workspace}}/build
-
-  build_and_test2:
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest] #, macOS-latest]
-
     steps:
     - uses: actions/checkout@v1
     - uses: humbletim/setup-vulkan-sdk@v1.2.0
@@ -63,6 +54,15 @@ jobs:
       shell: bash
       run: ctest -C $BUILD_TYPE
   
+##  build_and_test:
+##    runs-on: ${{matrix.os}}
+##    strategy:
+##      matrix:
+##        os: [windows-latest, ubuntu-latest] #, macOS-latest]
+##
+##    - name: Create Build Environment
+##      run: cmake -E make_directory ${{runner.workspace}}/build
+
 
 ##    needs: build_and_test
 ##    runs-on: ubuntu-latest
