--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,19 +10,23 @@ env:
 
 jobs:
   build_and_test:
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest] #, macOS-latest]
+
     name: My first job
     steps:
     - uses: actions/checkout@v1
 
   build_and_test2:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+
     name: My second job
     steps:
     - uses: actions/checkout@v1
 
-##    runs-on: ${{matrix.os}}
-##    strategy:
-##      matrix:
-##        os: [windows-latest, ubuntu-latest] #, macOS-latest]
 ##
 ##    steps:
 ##    - uses: actions/checkout@v1
