--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,10 +16,8 @@ jobs:
         os: [windows-latest, ubuntu-latest] #, macOS-latest]
 
     steps:
-    - name: Checkout repo
     - uses: actions/checkout@v1
-
-    - name: Setup Vulkan SDK
+    ##- name: Setup Vulkan SDK
     - uses: humbletim/setup-vulkan-sdk@v1.2.0
       with:
         vulkan-query-version: 1.3.204.0
