--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -54,7 +54,7 @@ jobs:
       shell: bash
       run: ctest -C $BUILD_TYPE
 
-  build_and_test2:
+  build_pages:
     needs: build_and_test
     runs-on: ubuntu-latest
 
