--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,14 +58,10 @@ jobs:
     needs: build_and_test
     runs-on: ubuntu-latest
 
-    name: My second job
-    steps:
-    - uses: actions/checkout@v1
-
-##    - name: Deploy docs to GH Pages
-##      uses: ActionwareIO/branch-push-action@action
-##      with:
-##        branch: gh-pages
-##        files: |
-##          ${{runner.workspace}}/build/docs/html
-##        GITHUB_TOKEN: ${{secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT}}
+    - name: Deploy docs to GH Pages
+      uses: ActionwareIO/branch-push-action@action
+      with:
+        branch: gh-pages
+        files: |
+          ${{runner.workspace}}/build/docs/html
+        GITHUB_TOKEN: ${{secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT}}
