--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,16 +59,11 @@ jobs:
     needs: build_and_test
     runs-on: ubuntu-latest
 
-    name: Deploy docs to GH Pages
     steps:
-
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{runner.workspace}}/test
-
-##    - name: Deploy docs to GH Pages
-##      uses: ActionwareIO/branch-push-action@action
-##      with:
-##        branch: gh-pages
-##        files: |
-##          ${{runner.workspace}}/build/docs/html
-##        GITHUB_TOKEN: ${{secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT}}
+    - name: Deploy docs to GH Pages
+      uses: ActionwareIO/branch-push-action@action
+      with:
+        branch: gh-pages
+        files: |
+          ${{runner.workspace}}/build/docs/html
+        GITHUB_TOKEN: ${{secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT}}
