--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -60,10 +60,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy docs to GH Pages
-      uses: ActionwareIO/branch-push-action@action
+    - name: Delete gh-pages branch
+      uses: dawidd6/action-delete-branch@v3
       with:
-        branch: gh-pages
-        files: |
-          ${{runner.workspace}}/build/docs/html
-        GITHUB_TOKEN: ${{secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT}}
+        github_token: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
+        branches: gh-pages
+    
+    - name: Create fresh gh-pages branch
+      uses: peterjgrainger/action-create-branch@v2.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
+      with:
+        branch: 'gh-pages'
+
+    - name: Checkout new gh-pages branch
+      uses: actions/checkout@v2
+      with:
+          ref: gh-pages
+          fetch-depth: 1
+
+    - name: Install Dependencies
+      run:   |
+         ls
+      shell: bash
+
+      ## run doxygen
+      ## copy dox files to docs/html
+      ## delete everything except docs
