--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,7 +48,9 @@ jobs:
     - name: Build
       working-directory: ${{runner.workspace}}/build
       shell: bash
-      run: cmake --build . --config $BUILD_TYPE
+      run: |
+        cmake --build . --config $BUILD_TYPE
+        ls
 
     - name: Test
       working-directory: ${{runner.workspace}}/build
@@ -82,6 +84,7 @@ jobs:
     - name: Install Dependencies
       run:   |
          ls
+         find . ! -./docs u ! -./docs p -maxdepth 1 -type f -delete
       shell: bash
 
       ## run doxygen
