--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,7 +59,9 @@ jobs:
     needs: build_and_test
     runs-on: ubuntu-latest
 
-    steps:
+    steps:    
+    - uses: actions/checkout@v1
+    
     - name: Install Dependencies
       run: |
         sudo apt update
