--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -55,8 +55,7 @@ jobs:
       shell: bash
       run: ctest -C $BUILD_TYPE
 
-  build_and_test2:
-    needs: build_and_test
+  build_docs:
     runs-on: ubuntu-latest
 
     steps:    
