--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,9 +1,9 @@
-name: CMake build, test, and generate docs
+name: Build and Test with CMake
 
 on:
   pull_request:
   push:
-    branches: main
+    branches: [main, actions-dev]
 
 env:
   BUILD_TYPE: Release
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest] #, macOS-latest]
 
+    name: Build and Test
     steps:
     - uses: actions/checkout@v1
     - uses: humbletim/setup-vulkan-sdk@v1.2.0
@@ -23,45 +24,33 @@ jobs:
         vulkan-components: Vulkan-Headers, Vulkan-Loader
         vulkan-use-cache: true 
     
-    - name:  Install dependencies
-      run:   |
-         if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt update
-              sudo apt install -y doxygen libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
-         #elif [ "$RUNNER_OS" == "Windows" ]; then
-         #     choco install important_windows_software
-         #else
-         #     echo "$RUNNER_OS not supported"
-         #     exit 1
-         fi
+    - name: Install dependencies
       shell: bash
+      run:   |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+             sudo apt update
+             sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
+        #elif [ "$RUNNER_OS" == "Windows" ]; then
+        #     choco install important_windows_software
+        #else
+        #     echo "$RUNNER_OS not supported"
+        #     exit 1
+        fi
    
-    - name: Create Build Environment
+    - name: Create build environment
       run: cmake -E make_directory ${{runner.workspace}}/build
 
-    - name: Configure CMake
+    - name: Configure cmake
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DGLIBBY_BUILD_RENDERER=ON -DGLIBBY_BUILD_EXAMPLES=ON -DGLIBBY_BUILD_DOCS=ON 
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DGLIBBY_BUILD_RENDERER=ON -DGLIBBY_BUILD_EXAMPLES=ON -DGLIBBY_BUILD_DOCS=OFF 
       
     - name: Build
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: cmake --build . --config $BUILD_TYPE
 
-    - name: Test
+    - name: Execute test suite
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: ctest -C $BUILD_TYPE
-
-  deploy_docs:
-    needs: build_and_test
-    runs-on: ubuntu-latest
-
-    - name: Deploy docs to GH Pages
-      uses: ActionwareIO/branch-push-action@action
-      with:
-        branch: gh-pages
-        files: |
-          ${{runner.workspace}}/build/docs/html
-        GITHUB_TOKEN: ${{secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT}}
