--- a/.github/workflows/autodocs.yml
+++ b/.github/workflows/autodocs.yml
@@ -20,28 +20,14 @@ jobs:
         sudo apt update
         sudo apt install -y doxygen
         
-    - name: Delete existing gh-pages branch
-      uses: dawidd6/action-delete-branch@v3
-      with:
-        github_token: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
-        branches: gh-pages
+    ##- name: Delete existing gh-pages branch
+    ##  uses: dawidd6/action-delete-branch@v3
+    ##  with:
+    ##    github_token: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
+    ##    branches: gh-pages
         
-    - name: Create fresh gh-pages branch
-      run: |
-        git checkout -b gh-pages
-    
-    #- name: Create fresh gh-pages branch
-    #  uses: peterjgrainger/action-create-branch@v2.0.1
-    #  env:
-    #    GITHUB_TOKEN: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
-    #  with:
-    #    branch: 'gh-pages'
-
-    #- name: Checkout new gh-pages branch
-    #  uses: actions/checkout@v2
-    #  with:
-    #      ref: gh-pages
-    #      fetch-depth: 1
+    ##- name: Create fresh gh-pages branch
+    ##  run: git checkout -b gh-pages
 
     - name: Create build environment
       run: cmake -E make_directory ${{runner.workspace}}/build
@@ -63,21 +49,27 @@ jobs:
         cp -R ${{runner.workspace}}/build/docs/html $GITHUB_WORKSPACE/html
 
     - name: Delete folders
+      shell: bash
       run:   |
         shopt -s extglob
         rm -rf !(html)
         mv html/ docs/
-      shell: bash
       
-    - name: Add and commit changes to gh-pages branch
-      run: |
-        git config --local user.email 'action@github.com'
-        git config --local user.name 'GitHub Action'
-        git add .
-        git commit -m 'Compile website'
+    ##- name: Add and commit changes to gh-pages branch
+    ##  run: |
+    ##    git config --local user.email 'action@github.com'
+    ##    git config --local user.name 'GitHub Action'
+    ##    git add .
+    ##    git commit -m 'Compile website'
 
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+    ##- name: Push changes
+    ##  uses: ad-m/github-push-action@master
+    ##  with:
+    ##    github_token: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
+    ##    branch: gh-pages
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GLIBBY_ACCESS_TOKEN_PAGES_DEPLOYMENT }}
-        branch: gh-pages
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
