--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "glibby")
 if(MSVC)
   target_compile_options(${PROJECT_NAME} PRIVATE /W4)
 else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -fms-extensions)
 endif()
 
 target_compile_definitions(${PROJECT_NAME}
