Replaced the loading of vertices with triangles in the OBJ loader

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,8 @@ set_target_properties(Catch2;Catch2WithMain PROPERTIES FOLDER "Catch2")
 file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS
      ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 add_executable(glibby_test_suite ${TEST_SOURCES})
 set_target_properties(glibby_test_suite PROPERTIES FOLDER "glibby/tests")
 target_include_directories(glibby_test_suite PRIVATE ${GLIBBY_INCLUDE_DIR})
