Added primitives test to build

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,12 +9,14 @@ if(NOT ${GLIBBY_BUILD_RENDERER})
 endif()
 
 add_executable(distance distance.cpp)
+add_executable(primitives primitives.cpp)
+
 add_executable(vk_window vk_window.cpp)
 # add_executable(...)
 
 set(GUI_ONLY_BINARIES vk_window)
 
-set(CONSOLE_BINARIES distance)
+set(CONSOLE_BINARIES distance primitives)
 
 target_link_libraries(${GUI_ONLY_BINARIES} ${GLIBBY_RENDERER_NAME})
 set_target_properties(${GUI_ONLY_BINARIES} ${CONSOLE_BINARIES}
