pybind11 build support

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,3 +1,7 @@
 if(GLIBBY_BUILD_RENDERER)
   add_subdirectory(glfw)
 endif()
+
+if(GLIBBY_BUILD_LANG_BINDINGS)
+  add_subdirectory(pybind11)
+endif()
